@@ -1,3 +1,14 @@
+2010-07-09  Vitaly Repeshko  <vitalyr@chromium.org>
+
+        Reviewed by Pavel Feldman.
+
+        [v8] Call JS gc in a fresh context to avoid retaining the current one.
+        https://bugs.webkit.org/show_bug.cgi?id=41963
+        http://crbug.com/46571
+
+        * bindings/v8/ScriptController.cpp:
+        (WebCore::ScriptController::collectGarbage):
+
 2010-07-09  Kenneth Russell  <kbr@google.com>
 
         Reviewed by Dimitri Glazkov.
